--- a/techdemo/templates/django-testjob.yaml
+++ b/techdemo/templates/django-testjob.yaml
@@ -1,3 +1,4 @@
+# templates/test-job.yaml
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -5,10 +6,14 @@ metadata:
 spec:
   template:
     spec:
+      initContainers:
+      - name: wait-for-db
+        image: busybox
+        command: ['sh', '-c', 'until nc -z -v -w30 db 3306; do echo "Waiting for database connection..."; sleep 5; done']
       containers:
       - name: django
-        image: sayalisa2li7/backend_techdemo:2.5  # Use your Django image
-        command: ["python3", "manage.py", "fetch_year_data"]  # Your management command
+        image: sayalisa2li7/backend_techdemo:5.5
+        command: ["python", "manage.py", "fetch_year_data"]
         env:
         - name: DJANGO_SETTINGS_MODULE
           value: tech_demo.settings
