--- a/techdemo/templates/django-cronjob.yaml
+++ b/techdemo/templates/django-cronjob.yaml
@@ -10,7 +10,7 @@ spec:
         spec:
           containers:
           - name: django
-            image: sayalisa2li7/backend_techdemo:5.5  # Replace with your Django image
+            image: sayalisa2li7/backend_techdemo:5cff344e5d43187330dacfb8bd115e7bd1b86022  # Replace with your Django image
             command: ["python", "manage.py", "fetch_stock_data"]  # Replace with your management command
             env:
             - name: DJANGO_SETTINGS_MODULE
