--- a/techdemo/templates/web-deployment.yaml
+++ b/techdemo/templates/web-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: {{ .Values.images.web }}
+        image: "{{ .Values.images.web }}:{{ .Values.images.tag2 }}"
         ports:
         - containerPort: 8000
         env:
